local-minikube/manifests/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: default
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
